# MedAgent

./: .gitignore  pyproject.toml
medagentboard/ehr/: 00_boosting.py  00_cross_valid.py  00_process_cross_valid.py  00_test_cross_valid.py  01_train_dl.py  02_generate_query.py  03_multi_agent_colacare.py  03_multi_agent_medagent.py  03_multi_agent_reconcile.py  03_single_llm.py  04_process_reports.py  05_train_fusion.py  06_ensemble_baselines.py  07_evaluate_report.py  08_evaluate_baselines.py  colacare.yml  generate_query.py  importance.py  multi_agent_colacare.py  process_reports.py  run.sh  train_dl.py  train_dl.sh
medagentboard/utils/: bootstrap.py  generate_obste_note.py  json_utils.py  litsense_utils.py  llm_configs.py  prompt_template.py
pyehr/datasets/cdsl/: preprocess_cdsl.py
pyehr/datasets/esrd/: preprocess_cross_valid_esrd.py  preprocess_esrd.py
pyehr/datasets/mimic-iv/: preprocess_cross_valid_mimic.py  preprocess_mimic.py
pyehr/datasets/obstetrics/: preprocess_cross_valid_obste.py  preprocess_obstetrics.py
pyehr/datasets/tjh/: preprocess_tjh.py
pyehr/datasets/utils/: datamodule.py
pyehr/models/: __init__.py  adacare.py  concare.py  retain.py
pyehr/pipelines/: dl.py  dl_pipeline.py  ml_pipeline.py
pyehr/utils/: calibration.py  loss.py  metrics.py
